//##########################################################################
//# Copyright (C) 2010-2011, Zenoss Inc.  All Rights Reserved.
//##########################################################################

package org.zenoss.protobufs.util;

message TimestampRange {
    optional uint64 start_time = 1;
    optional uint64 end_time = 2;
}

message Property {
    required string name = 1;
    required string value = 2;

    extensions 1000 to max;
}

